--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
     "@nuxt/http": "latest",
     "express": "latest",
     "nuxt": "latest"
   },
   "devDependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@nuxt/postcss8": "^1.1.3",
     "@nuxtjs/eslint-config": "^5.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/fontawesome": "^1.1.2",
     "autoprefixer": "^10.4.4",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.20.0",
